[package]
name = "SimplyTypedLambdaCalculusCompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
# Adjust the LLVM version accordingly here, I just happen to use LLVM 15.
llvm-sys-160 = { package = "llvm-sys", version = "160", features = ["prefer-static"] }
